# USE

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Makefile  README.md  Reproducibility.md  TODO.txt  assembly_OnGVT  autoconf.sh  bug_pcs.txt  collect_stats.py  compact_all_data.sh  compact_phold_unbalanced.sh  create_config.sh  dat.sh  debug.sh  figure3_run.sh  figure4_run.sh  figure5_run.sh  figure6_run.sh  figure7_run.sh  figure8c_run.sh  figure9_run.sh  figure9a_run.sh  figure9b_run.sh  figure9c_run.sh  gen_plots.sh  hope_config.txt  launch_numa.sh  launch_pcs.sh  launch_pcs2_retry2.sh  launch_pcs2_retry_packet.sh  launch_pcs_dyn.sh  launch_pcs_dynwin.sh  launch_pcs_hot_cells.sh  launch_pcs_retry.sh  launch_phold-hs_retry.sh  launch_phold.sh  (+70 more)
base_scripts/: figure5_gen.sh  figure8__run.sh  figure8_gen.sh  figure9__run.sh  figure9_gen.sh
bck_scripts/: launch_phold.sh  old-launch_phold_retry.sh
build_scripts/: build_cache_map.py  gen_clock_header.sh  get_cache_data.sh
core/: STATE_MACHINE_EVT.txt  application.c  atomic.h  atomic_16byte.c  atomic_epoch_and_ts.c  calqueue-prova.c  calqueue.c  calqueue.h  checks.c  communication.c  communication.h  core.c  core.c.save  core.h  datatypes.h  event_type.h  fetch.c  handle_interrupt.c  handle_interrupt_with_check.c  hpdcs_math.c  hpdcs_utils.h  ipi.c  ipi_ctrl.c  ipi_ctrl.h  ipi_decision_model_stats.c  jmp.S  jmp.h  list.c  local_index_lp.c  local_scheduler.c  local_scheduler.h  lp_stats.c  lp_stats.h  main.c  memory_limit.c  message_state.c  message_state.h  metrics_for_lp_migration.c  metrics_for_window.c  metrics_for_window.h  (+22 more)
datatypes/: bitmap.h  list.c  list.h
hijacker/: TODO
include/: ROOT-Sim.h  atomic.h  atomic_16byte.h  atomic_epoch_and_ts.h  calqueue.h  checks.h  communication.h  core.h  events.h  handle_interrupt.h  handle_interrupt_with_check.h  hpdcs_utils.h  ipi.h  ipi_decision_model_stats.h  list.h  local_index_lp.h  lookahead.h  lp_local_struct.h  lp_stats.h  memory_limit.h  message_state.h  myallocator.h  nb_calqueue.h  numa.h  numerical.h  pipe.h  posting.h  preempt_counter.h  prints.h  queue.h  reverse.h  scheduler.h  simple_dynamic_list.h  simtypes.h  stack.h  state.h  timer.h  window.h
ipilim/: ipi_end_limit.c  ipi_start_limit.c
mm/: allocator.c  allocator.h  buddy.c  checkpoints.c  dymelor.c  dymelor.h  garbagecollector.c  garbagecollector.h  mm.h  platform.c  recoverable.c  reverse.c  reverse.h  segment.c  slab.c  slab.h  state.c  unrecoverable.c
model/: README.md  application.c  application.h  event_type.h  functions_app.c
models/: README.md
plot-scripts/: common.py  figure3_plot.py  figure4_plot.py  figure5_plot.py  figure6_plot.py  figure7_plot.py  figure8_plot.py  figure8v1_plot.py  figure8v2_plot.py  figure8v3_plot.py  figure9_plot.py  figure9a_plot.py  figure9b_plot.py  figure9v1_plot.py  new_plot.py  process_use_locality_folder.py
powercap/: config.txt  heuristics.c  macros.h  powercap.c  powercap.h  stats_t.h
results/: get_static_optimum.py  histo.gp  results.csv  results_phold_roll1.txt  results_phold_roll_multicast2.txt  results_phold_roll_multicast3.txt
results_and_scripts/: config_server.sh  main_launch1.sh  main_launch1packet.sh  main_launch2totti.sh  main_launch_pcs_new_capitano.sh  main_launch_pcs_new_packet (copia).sh  main_launch_pcs_new_packet.sh  main_launch_pcs_new_totti.sh  main_launch_phold_multicast_packet.sh  main_launch_phold_near_packet.sh  main_launch_phold_packet.sh
reverse/: reverse.c  reverse.h
script/: hijacker-conf.xml
scripts_PADS2020/: compact_pcs.sh  compact_pcs_packet.sh  launch_pcs_retry.sh  launch_test.sh  pcs.conf  pcs2.conf  plot_pcs.sh  run_model.sh  run_model_with_prob.sh
src/: CMakeLists.txt  grep_all_allocs.sh  grep_all_thvars.sh
src/allocators/: common.h  glo_alloc.h  lpm_alloc.h  lps_alloc.h  thr_alloc.h
src/api/: api.c  topology.c
src/build_scripts/: build_cache_map.py  compute_clock.c  gen_clock_header.sh  get_cache_data.sh  signmodules.sh
src/configuration/: configuration.c  configuration.h
src/core/: atomic.h  configuration.c  core.c  fetch.c  gvt.c  gvt.h  hpdcs_math.h  incremental_state_saving.c  incremental_state_saving.h  iss_model.c  local_index_lp.c  local_scheduler.c  lp_lock.c  lp_lock.h  main.c  metrics_for_lp_migration.c  metrics_for_lp_migration.h  metrics_for_window.c  nb_calqueue.c  numa_migration_support.h  numerical.c  parseparam.c  queue.c  queue.h  state_swapping.c  topology.c  virtual_timer.c  x86.c
src/core/local_index/: local_index.c  local_index.h  local_index_types.h
src/datatypes/: bitmap.h  list.c  list.h
src/gc/: garbagecollector.c
src/gvt/: gvt.c  gvt.h
src/include/: ROOT-Sim.h  application.h  atomic.h  configuration.h  core.h  events.h  fetch.h  hpdcs_utils.h  incremental_state_saving.h  lp_local_struct.h  nb_calqueue.h  prints.h  queue.h  simtypes.h  state.h  state_swapping.h  timer.h  window.h
src/lp/: lp.c  lp.h  lp_lock.h  rollback.c
src/lp/mm/allocator/: dymelor.c  dymelor.h
src/lp/mm/checkpoints/: autockpt.h  checkpoints.c
src/lp/mm/segment/: buddy.c  buddy.h  segment.c  segment.h
src/mm/: allocator.c  allocator.h  autockpt.h  buddy.c  checkpoints.c  dymelor.c  dymelor.h  garbagecollector.c  garbagecollector.h  incremental_state_saving.c  incremental_state_saving.h  mm.h  platform.c  platform.h  recoverable.c  segment.c  segment.h  state.c  unrecoverable.c
src/mm/allocators/: common.h  glo_alloc.h  thr_alloc.h
src/numerical/: numerical.c
src/os/: filesystem.c  filesystem.h  numa.c  numa.h  thread.c  thread.h
src/reverse/: reverse.c  reverse.h  slab.c
src/scheduler/: fetch.c  fetch.h  nb_calqueue.c  nb_calqueue.h
src/scheduler/local/: local_scheduler.c  lp_local_struct.h  metrics_for_window.c  metrics_for_window.h
src/scheduler/local/local_index/: local_index.h
src/statistics/: statistics.c  statistics.h
src/utils/: error.c  error.h  float.h  prints.h  timer.h
test/: CMakeLists.txt  platform.c
test/core/: numerical.c
test/datatypes/: bitmap.c  list.c
test/integration/: empty.c
test/mm/: incremental_state_saving.c  iss.c
(+600 files in other folders)
